Связал фронт и бек. БД пока нет

--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
                 <ul class="nav navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="exchanges.html" style="color: rgb(255,255,255);margin-left: 0px;">Текущий курс</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="blog.html" style="color: rgb(255,255,255);">Блог</a></li>
-                </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="log-in.html" style="background: rgb(239,239,239);border-radius: 11px;color: rgb(0,0,0);font-weight: bold;">Вход</a></span></div>
+                </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="log-in.php" style="background: rgb(239,239,239);border-radius: 11px;color: rgb(0,0,0);font-weight: bold;">Вход</a></span></div>
         </div>
     </nav>
     <div class="simple-slider">
