--- a/long_page_toc.html
+++ b/long_page_toc.html
@@ -13,6 +13,38 @@
 </head>
 
 <body>
+    <div id="toc_container">
+        <ul class="toc_list">
+
+            <li><a href="#a1">2 Second Point Header</a></li>
+            <li><a href="#a2">1 First Point Header</a>
+                <ul>
+                    <li><a href="#a3">1.1 First Sub Point 1</a></li>
+                    <li><a href="#a4">1.2 First Sub Point 2</a>
+                        <ul>
+                            <li><a href="#a3">1.1 First Sub Point 1</a></li>
+                            <li><a href="#a4">1.2 First Sub Point 2</a>
+                                <ul>
+                                    <li><a href="#a3">1.1 First Sub Point 1</a></li>
+                                    <li><a href="#a4">1.2 First Sub Point 2</a>
+                                        <ul>
+                                            <li><a href="#a3">1.1 First Sub Point 1</a></li>
+                                            <li><a href="#a4">1.2 First Sub Point 2</a>
+                                                <ul>
+                                                    <li><a href="#a3">1.1 First Sub Point 1</a></li>
+                                                    <li><a href="#a4">1.2 First Sub Point 2</a></li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
     <b>
         Страница с разными уровнями заголовков для тестирования третьей лабораторной.
     </b>
