--- a/long_page_toc.html
+++ b/long_page_toc.html
@@ -45,6 +45,22 @@
             </li>
         </ul>
     </div>
+
+    <div id="toc_container">
+        &nbsp;&nbsp; <a href="#a1">Title</a> </br>
+        &nbsp;&nbsp; &nbsp;&nbsp; <a href="#a1">Title</a> </br>
+        &nbsp;&nbsp; &nbsp;&nbsp; <a href="#a1">Title</a> </br>
+        &nbsp;&nbsp; <a href="#a1">Title</a> </br>
+        &nbsp;&nbsp; &nbsp;&nbsp; <a href="#a1">Title</a> </br>
+        &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; <a href="#a1">Title</a> </br>
+        &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; <a href="#a1">Title</a> </br>
+        &nbsp;&nbsp; &nbsp;&nbsp; <a href="#a1">Title</a> </br>
+        &nbsp;&nbsp; <a href="#a1">Title</a> </br>
+        &nbsp;&nbsp; <a href="#a1">Title</a> </br>
+        &nbsp;&nbsp; <a href="#a1">Title</a> </br>
+        &nbsp;&nbsp; <a href="#a1">Title</a> </br>
+    </div>
+
     <b>
         Страница с разными уровнями заголовков для тестирования третьей лабораторной.
     </b>
